tools/tests/ui/fail/l1091.cnf
// Test file for error code: L1091
// Expected error: Underflow Syntax character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
